# qlora_semantic_extraction

./: .gitignore  CITATION.cff  build_all.sh  docker-compose.yaml  export_requirements.sh  make_needed_folders.sh  pyproject.toml  readme.md  run_llm_server.sh  run_llm_servers_for_data_generation.sh  start_all.sh  stop_all.sh  stop_llm_servers_for_data_generation.sh  test_bash.sh  test_parse.py
airflow_docker/: Dockerfile  build_extra_docker.sh  requirements.txt
dags/: prepare_synthetic_data.py  test_dag.py
dags/custom/: prepare_synthetic_data.py
dags/custom/synthetic_data/: inserting_articles.py
dags/custom/synthetic_data/prompt_running/: article_summary_prompt.py  extract_article_summary.py  extract_raw_relations.py  extract_topics.py  extract_topics_base_on_summaries.py  generate_relation_tables.py  topic_extraction_prompt.py
inference_server_dockers/llama_cpp_server/: LocalLLamaCPPServerDockerfile  build_llm_server.sh
jupyters/: 02_export_data.ipynb
prompt_prototypes/extraction_categories/: extract_categories.txt  extract_categories_template.txt
sql/synthetic_data/: initialize_database.sql
